# AbstentionBench

./: .gitignore  README.md  activate.sh  main.py  pyproject.toml  setup.sh
abstentionbench/: __init__.py
abstentionbench/analysis/: __init__.py  load_results.py
abstentionbench/configs/: __init__.py  default_pipeline.yaml
abstentionbench/configs/dataset/: alcuna.yaml  bbq.yaml  big_bench_disambiguate.yaml  big_bench_known_unknowns.yaml  coconot.yaml  dummy.yaml  falseqa.yaml  freshqa.yaml  gpqa.yaml  gsm8k.yaml  kuq.yaml  mediq.yaml  mmlu_history.yaml  mmlu_math.yaml  moralchoice.yaml  musique.yaml  qaqa.yaml  qasper.yaml  self_aware.yaml  situated_qa.yaml  squad2.yaml  umwp.yaml  worldsense.yaml
abstentionbench/data/: __init__.py
abstentionbench/recipe/: abstention.py  evaluation.py  inference.py  job_manager.py  models.py
abstentionbench/recipe/abstention_datasets/: alcuna.py  bbq.py  big_bench.py  coconot.py  false_qa.py  freshqa.py  gpqa.py  gsm8k.py  kuq.py  mediq.py  mmlu.py  moralchoice.py  musique.py  nq_dataset.py  qaqa.py  qasper.py  self_aware.py  situated_qa.py  squad.py  umwp.py  world_sense.py
configs/: default_pipeline.yaml
recipe/abstention_datasets/: squad.py
tests/: run_llama3_instruct_inference.py  test_abstention_detector.py  test_correctness_evaluator.py  test_datasets.py  test_inference.py  test_job_manager.py  test_main.py  test_models.py
